recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value step
current(step);
        ^Tree:6: error: not found: value step
current(step);
        ^