recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
current(step);
avance(length);
droite(angle);
current(step);
tree(3,shrink*length,angle,shrink);





}




